--- a/Backend/Dev-learning-Platform/src/main/resources/application-mysql.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-mysql.properties
@@ -1,15 +1,22 @@
 spring.application.name=Dev-learning-Platform
 
 # ==============================================
-# CONFIGURACIÓN DB DE DESARROLLO (MySQL)
+# CONFIGURACIÓN DB DE DESARROLLO (MySQL Local)
 # ==============================================
 
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:elearning_platform}
-spring.datasource.username=${DB_USER:elearning_user}
-spring.datasource.password=${DB_PASSWORD:elearning_password}
+# Configuración de MySQL local
+spring.datasource.url=jdbc:mysql://localhost:3306/elearning_platform?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Configuración de conexión MySQL
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.connection-timeout=20000
 
 # ==============================================
 # CONFIGURACIÓN DE JWT
@@ -36,19 +43,6 @@ app.upload.local.profile-images-path=profiles
 app.upload.local.base-url=http://localhost:8080/uploads
 
 # ==============================================
-# CONFIGURACIÓN DE OCI Object Storage (DESARROLLO)
-# ==============================================
-
-# Habilitado para congruencia con develop
-oci.enabled=true
-oci.config.profile=DEFAULT
-oci.config.file=${user.home}/.oci/config
-oci.objectstorage.region=sa-bogota-1
-oci.objectstorage.namespace=axxillutcfyk
-oci.objectstorage.bucket-name=bucket-images
-oci.objectstorage.public-url-base=https://objectstorage.sa-bogota-1.oraclecloud.com/n/axxillutcfyk/b/bucket-images/o
-
-# ==============================================
 # CONFIGURACIÓN DE CORS
 # ==============================================
 
@@ -59,3 +53,14 @@ app.frontend.url=http://localhost:3000
 # ==============================================
 
 server.port=8080
+
+# ==============================================
+# CONFIGURACIÓN DE LOGGING
+# ==============================================
+
+logging.level.com.Dev_learning_Platform.Dev_learning_Platform=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
