--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,13 +26,15 @@
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@types/react-calendar": "^4.1.0",
+    "@tanstack/react-query": "^5.87.4",
+    "@tanstack/react-query-devtools": "^5.87.4",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -52,6 +54,7 @@
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
     "@vitejs/plugin-react-swc": "^4.0.1",
