--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -31,6 +31,9 @@ jobs:
       env:
         JWT_SECRET_KEY: testSecretKeyForCITestingPurposesOnly123456789
         JWT_EXPIRATION_TIME: 86400000
+        STRIPE_API_KEY: sk_test_dummy_key_for_ci_testing
+        STRIPE_API_PUBLIC_KEY: pk_test_dummy_key_for_ci_testing
+        STRIPE_WEBHOOK_SECRET: whsec_dummy_secret_for_ci_testing
       run: |
         cd Backend/Dev-learning-Platform
         ./mvnw clean test -Dspring.profiles.active=test -q -Dlogging.level.org.springframework.boot.autoconfigure=OFF
