--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,12 +1,7 @@
 {
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "http://149.130.176.157:8080/api/$1"
-    },
-    {
-      "source": "/auth/(.*)",
-      "destination": "http://149.130.176.157:8080/auth/$1"
-    }
+    { "source": "/api/(.*)", "destination": "http://149.130.176.157:8080/api/$1" },
+    { "source": "/auth/(.*)", "destination": "http://149.130.176.157:8080/auth/$1" },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
