--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "java -jar target/Dev_learning_Platform-0.0.1-SNAPSHOT.jar"
+startCommand = "cd Backend/Dev-learning-Platform && java -jar target/Dev_learning_Platform-0.0.1-SNAPSHOT.jar"
 healthcheckPath = "/actuator/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
