--- a/Backend/Dev-learning-Platform/src/main/resources/application-render.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-render.properties
@@ -24,7 +24,10 @@ jwt.secret=${JWT_SECRET_KEY:4c6fb40397598dd8c1dbb3155fba3ca208a16fe8d5d90162b74f
 jwt.expiration=${JWT_EXPIRATION_TIME:86400000}
 
 # CORS Configuration
-app.cors.allowed-origins=${FRONTEND_URL:https://e-learning-platform-v2.onrender.com}
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,https://e-learning-platform-v2.netlify.app,https://68d06339dd81684b199dbda2--e-learning-platform-v2.netlify.app,https://68d06458dd81684dc29dbe15--e-learning-platform-v2.netlify.app}
+app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+app.cors.allowed-headers=*
+app.cors.allow-credentials=true
 
 # File Upload Configuration
 app.upload.local.upload-dir=./uploads
