--- a/Backend/Dev-learning-Platform/src/main/resources/application-render.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-render.properties
@@ -31,7 +31,7 @@ jwt.secret=${JWT_SECRET_KEY:4c6fb40397598dd8c1dbb3155fba3ca208a16fe8d5d90162b74f
 jwt.expiration=${JWT_EXPIRATION_TIME:86400000}
 
 # CORS Configuration
-app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,https://e-learning-platform-v2.netlify.app,https://*.netlify.app}
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,https://e-learning-platform-v2.netlify.app,https://68d0836270eee69b08cba3cf--e-learning-platform-v2.netlify.app,https://*.netlify.app}
 app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 app.cors.allowed-headers=*
 app.cors.allow-credentials=false
